1. RidBag contains only links not record instances. 2. Entities can be created/updated without calling of explicit save method.